Restarting from scratch #2 (http)